# subgraph-dips-indexer-selection

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  IISA-AUDIT-FINDINGS.md  LICENSE  README.md  docker-compose.yml  iisa-presentation.html  justfile  pyproject.toml  release-please-config.json
.github/actions/sync-manifest/: action.yml
.github/workflows/: audit.yml  build-release-image.yml  build-service-image.yml  ci.yml  osv-scanner.yml  rebuild-cronjob-image.yml  release-please.yml  sync-release-manifest.yml
cronjobs/compute_scores/: Dockerfile  __init__.py  bq.py  gateway_queries_pb2.py  iisa_client.py  main.py  processing.py  redpanda.py  requirements.txt  subgraph.py  sync_status_fetcher.py  test_gateway_filter.py  test_subgraph.py
cronjobs/compute_scores/proto/: __init__.py  gateway_queries.proto  gateway_queries_pb2.py
jobs/compute_scores/: Dockerfile  bq.py  main.py  processing.py  requirements.txt
k8s/: README.md  configmap-example.yaml  deployment.yaml  iisa-scores-cache-pvc.yaml  kustomization.yaml  networkpolicy.yaml  score-computation-cronjob.yaml  scores-pvc.yaml  service.yaml
rust/: Cargo.toml  README.md
rust/crates/iisa-core/: Cargo.toml
rust/crates/iisa-core/src/: config.rs  domain.rs  lib.rs  metrics.rs  score.rs  select.rs
rust/crates/iisa-core/tests/: findings.rs
sql/: 01_create_indexer_scores_table.sql
src/iisa/: __init__.py  bq.py  geoip.py  iisa_http_endpoints.py  indexer_selection.py  network.py  perf.py  score_columns.py  score_loader.py  sync_status_loader.py  time.py  typing.py
src/iisa/data_manager/: __init__.py  iata.py  manager.py  processing.py
src/iisa/select/: __init__.py  iisa.py  processor.py
src/iisa_service/: __init__.py  config.py  main.py  models.py
tests/: conftest.py  test_bq.py  test_compute_scores_job.py  test_data_manager.py  test_data_manager_iata.py  test_dips_info_parser.py  test_e2e_data_manager.py  test_gateway_filter.py  test_geoip.py  test_graph_node_version_fetcher.py  test_graph_node_version_filter.py  test_iisa_http_endpoints.py  test_iisa_select.py  test_iisa_time.py  test_merge_streaming_truncation.py  test_network.py  test_readme_weights.py  test_redpanda_progress.py  test_redpanda_provider.py  test_row_memory.py  test_select_data_processor.py  test_sync_status_fetcher.py  test_sync_status_loader.py
tests/__fixtures__/: faker.py  indexers.json  network.py
tests/e2e/: test_e2e_data_manager.py
