[project]
name = "subgraph-dips-indexer-selection"
version = "0.1.0"
description = "Indexing Indexer Selection Algorithm for The Graph DIPs service"
requires-python = ">=3.11"
dependencies = [
    # Data processing
    "pandas>=2.0,<3.0",
    "pyarrow>=14.0,<18.0",
    "numpy>=1.24,<3.0",

    # BigQuery
    "bigframes>=1.0,<2.0",
    "google-cloud-bigquery>=3.0,<4.0",

    # HTTP/Networking
    "tenacity>=8.2,<10.0",

    # FastAPI service
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-mock>=3.0,<4.0",
    "pytest-cov>=7.0,<8.0",
    "faker>=18.0,<40.0",
    "faker-airtravel>=0.4,<1.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.1,<1.0",
    "httpx>=0.24,<1.0",
    "pandas-stubs>=2.0,<3.0",
    # CronJob test dependencies
    "scipy>=1.11,<2.0",
    "scikit-learn>=1.3,<2.0",
    "requests>=2.28,<3.0",
    "airportsdata>=20230101",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iisa"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
files = ["src/**/*.py"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
