[project]
name = "subgraph-dips-indexer-selection"
version = "0.1.0"
description = "Indexing Indexer Selection Algorithm for The Graph DIPs service"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    # Data processing
    "pandas>=2.0,<4.0",
    "pyarrow>=23.0.1,<25.0",
    "numpy>=1.24,<3.0",
    # FastAPI service. `!= 0.136.3` skips a single release that pulls in
    # a typosquat package via its `[standard]` extras (OSV MAL-2026-4750).
    "fastapi>=0.100,!=0.136.3,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "geoip2>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-mock>=3.0,<4.0",
    "pytest-cov>=7.0,<8.0",
    "faker>=18.0,<40.0",
    "faker-airtravel>=0.4,<1.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.1,<1.0",
    "httpx>=0.24,<1.0",
    "pandas-stubs>=2.0,<3.0",
    # CronJob dependencies
    "scipy>=1.11,<2.0",
    "scikit-learn>=1.3,<2.0",
    "requests>=2.33.0,<3.0",
    "types-requests>=2.28,<3.0",
    "aiohttp>=3.13.4,<4.0",
    "tenacity>=8.0,<10.0",
    "airportsdata>=20230101",
    # Transitive pins to keep the vulnerability scanner happy.
    "idna>=3.15",
    "urllib3>=2.7.0",
    "starlette>=1.0.1",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iisa"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
extend-exclude = ["*_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
files = ["src/**/*.py", "cronjobs/compute_scores/**/*.py"]
mypy_path = "cronjobs/compute_scores"
explicit_package_bases = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# gateway_queries_pb2 defines its message classes at runtime via the
# protobuf descriptor pool, so mypy can't see them statically — skip
# type-checking the module and treat its imports as Any.
[[tool.mypy.overrides]]
module = "gateway_queries_pb2"
ignore_errors = true
follow_imports = "skip"
